Fixed html issues on mobile menu toggle and on img sizes attribute.

--- a/style.css
+++ b/style.css
@@ -347,6 +347,7 @@ header .menu-toggle {
 }
 
 header .menu-toggle .toggle-line {
+  display: block;
   width: 25px;
   height: 2.5px;
   background-color: hsl(var(--clr-white)/.5);
